--- a/theme.scss
+++ b/theme.scss
@@ -75,7 +75,7 @@ $font-family-code: "IBM Plex Mono";
 
   h2 {
     color: $dark-blue;
-    margin-bottom: 1.5rem;
+    margin-bottom: 2rem;
   }
 
   a {
@@ -106,7 +106,8 @@ $font-family-code: "IBM Plex Mono";
 
 .reveal .sourceCode {
   font-size: 2rem;
-  border-radius: 4px;
+  border-radius: 8px;
+  background-color: white;
 }
 
 .reveal .cell {
